DesignProject/tests/error/test01.src
// undeclared variable - c is not declared
func add(a : integer, b : integer) -> integer {
    local result : integer;
    result := a + b + c;
    return(result);
}

